data/derived/comb/progs/unify/prog1762.ml.out
Characters 79-93:
  else addPHelper sum;;
       ^^^^^^^^^^^^^^
Error: This expression has type int list -> int
       but an expression was expected of type int
